k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appnodejs-deployment
  labels:
    app: appnodejs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appnodejs
  template:
    metadata:
      labels:
        app: appnodejs
    spec:
      containers:
      - name: nodeserver
        image: fouadallaoui/appbackend-azure:latest
        ports:
        - containerPort: 3001

---
apiVersion: v1
kind: Service
metadata:
  name: appnodejs-service

spec:
  selector:
    app: appnodejs
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80  # The port exposed by the service
      targetPort: 3001  # The port on which the container is listening
