k8s/ingress-internal.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapi
spec:
  ingressClassName: nginx-internal-static
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: appnodejs-service
            port:
              number: 80
