k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - example.com  # Replace with your domain
    secretName: tls-secret  # Use the secret created by cert-manager or your custom secret

  rules:
  - host: example.com  # Replace with your domain
    http:
      paths:
      - path: /books
        pathType: Prefix
        backend:
          service:
            name: appnodejs-service  # Your Node.js API service name
            port:
              number: 3001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-frontend-service  # Your React frontend service name
            port:
              number: 80
